# trove-mpc

./: .gitignore  README.md  pyproject.toml
tests/: get_test_table.sql  test_objs_mpc.csv  test_result.json  test_run_kete.py
trove_mpc/: __init__.py  mpc.py  mpc_match.py  transient.py
