[build-system]
requires = ['setuptools>=64']
build-backend = "setuptools.build_meta"

[project]
name = "trove_mpc"
authors = [{name = "Noah Franz", email = "nfranz@arizona.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]

requires-python = ">=3.9" #,<3.12"

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 2 - Pre-Alpha"
]

dependencies = [
  # necessary dependencies for the src code
  "numpy>=1.20,<2",
  "astropy>=6",
  "pandas",
  "kete"  
]

[project.urls]
Home = "https://github.com/astro-trove/"

[project.optional-dependencies]
# tools for building the readthedocs page
docs = [
  "Sphinx>=3.0.0",
  "myst-parser>=0.13",
  "nbsphinx>=0.9.1",
  "sphinx-book-theme>=0.0.33",
  "sphinx_copybutton",
  "autodoc",
  "ipykernel",
  "autodoc_pydantic"
]

# useful tools for developers
dev = [
  "ruff", # linter
  "pre-commit", # enable pre-commit hooks
]

#[tool.setuptools.packages.find]
#where = ['trove_mpc']

[tool.setuptools.dynamic]
version = {attr = 'trove_mpc._version.__version__'}